---------------------------------------------------------------------
Release ?
---------------------------------------------------------------------
NEW FEATURES:
* Added luga.data.region.initRegions()
* luga.validator.initForms now supports an optional rootNode parameter
* luga.ajaxform.initForms now supports an optional rootNode parameter
* Added luga.data.region.setUp({
     autoregister: true|false
  })
* luga.data.ChildXmlDataSet is now available

NOTES:
* Documentation is now a SPA

CHANGES:
* Luga CSI is not part of the project anymore
* luga.data.Detailset: Renamed config.dataSet to config.masterDataSet
* jQuery updated to 2.2.4

BUG FIXES:
* Two bugs on luga.setProperty()
* Fixed bug in luga.form.utils.getFieldGroup(). Now it works even if the name attribute contains special chars
* Callback bug on luga.validator.api.validateField()

KNOWN ISSUES:
* IE9 and CORS: http://stackoverflow.com/questions/10232017/ie9-jquery-ajax-with-cors-returns-access-is-denied
* Proper release notes started only after release 0.5 :-)

---------------------------------------------------------------------
Release 0.5
---------------------------------------------------------------------