@@ -50,6 +50,12 @@
 
 	<!-- Specs -->
 	<script src="spec/common/luga.Spec.js"></script>
+	<script src="spec/common/luga.dom.Spec.js"></script>
+	<script src="spec/common/luga.form.Spec.js"></script>
+	<script src="spec/common/luga.localStorage.Spec.js"></script>
+	<script src="spec/common/luga.Notifier.Spec.js"></script>
+	<script src="spec/common/luga.string.Spec.js"></script>
+	<script src="spec/common/luga.utils.Spec.js"></script>
 
 	<script src="spec/ajaxform/luga.ajaxform.Spec.js"></script>
 
@@ -71,17 +77,9 @@
 	<script src="spec/data/luga.data.sort.Spec.js"></script>
 	<script src="spec/data/luga.data.widgets.ShowMore.Spec.js"></script>
 
-	<script src="spec/common/luga.dom.Spec.js"></script>
-
-	<script src="spec/common/luga.form.Spec.js"></script>
 
 	<script src="spec/history/luga.history.Spec.js"></script>
 
-	<script src="spec/common/luga.Notifier.Spec.js"></script>
-
-	<script src="spec/common/luga.string.Spec.js"></script>
-
-	<script src="spec/common/luga.utils.Spec.js"></script>
 
 	<script src="spec/validator/luga.validator.Spec.js"></script>
 	<script src="spec/validator/luga.validator.FormValidator.Spec.js"></script>
