@@ -2,6 +2,8 @@
 
 DOCS:
 
+- Add luga.localStorage.retrieve() and luga.localStorage.persist()
+
 - Luga.data: search sample (need REST endpoint)
 - Luga.data: examples with event delegation:
   https://api.jquery.com/on/#direct-and-delegated-events
